--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bannerMobile {
+    background-image: url("./assets/img/banner-home-mobile.svg");
+}
