--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,13 @@
 .bannerMobile {
     background-image: url("./assets/img/banner-home-mobile.svg");
 }
+
+.background-product-page-mobile {
+    background-image: linear-gradient(to top, #E9ECEF 0, #E9ECEF 86.5%, #4529E6 13.5%);
+}
+
+@media (min-width: 640px){
+    .background-product-page-mobile {
+        background-image: linear-gradient(to top, #E9ECEF 0, #E9ECEF 80%, #4529E6 20%);    
+    }
+}
