--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-.bannerMobile {
-    background-image: url("./assets/img/banner-home-mobile.svg");
+.banner {
+    background-image: url("./assets/img/car-wallpaper.png");
 }
 
 .container {
@@ -29,6 +29,12 @@
 
 .background-product-page-mobile {
     background-image: linear-gradient(to top, #E9ECEF 0, #E9ECEF 86.5%, #4529E6 13.5%);
+}
+
+@media (min-width: 2100px) {
+    .banner {
+        background-image: url("./assets/img/car-wallpaper-4k.png");
+    }
 }
 
 @media (min-width: 640px){
